--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>Vite App</title>
-  <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.prod.js"></script>
+<!--  <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.prod.js"></script>-->
 </head>
 <body>
 <div id="app"></div>
