--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta http-equiv="Cache-Control" content="no-cache" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <title>Vite App</title>
+  <title>f-mall</title>
 <!--  <script src="https://unpkg.com/vue@3.2.47/dist/vue.global.prod.js"></script>-->
 </head>
 <body>
